standards/gnds-2.0/gnds/c/src/v2.0/general/Mixed.h

// --- Const-aware handles.
typedef const struct MixedClass *const ConstHandle2ConstMixed;
typedef       struct MixedClass *const ConstHandle2Mixed;
// +++ Get, by productFrame, non-const
extern_c Handle2CovarianceMatrix
MixedCovarianceMatrixGetByProductFrame(
   ConstHandle2Mixed self,
   const char *const productFrame
);
// +++ Set, by productFrame
extern_c void
MixedCovarianceMatrixSetByProductFrame(
   ConstHandle2Mixed self,
   const char *const productFrame,
   ConstHandle2ConstCovarianceMatrix covarianceMatrix
);
// -----------------------------------------------------------------------------
// Child: sum
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
MixedSumHas(ConstHandle2ConstMixed self);
// +++ Clear
extern_c void
MixedSumClear(ConstHandle2Mixed self);
// +++ Size
extern_c size_t
MixedSumSize(ConstHandle2ConstMixed self);
// +++ Add
extern_c void
MixedSumAdd(ConstHandle2Mixed self, ConstHandle2ConstSum sum);
// --- Get, by index \in [0,size), const
extern_c Handle2ConstSum
MixedSumGetConst(ConstHandle2ConstMixed self, const size_t index_);
// +++ Get, by index \in [0,size), non-const
extern_c Handle2Sum
MixedSumGet(ConstHandle2Mixed self, const size_t index_);
// +++ Set, by index \in [0,size)
extern_c void
MixedSumSet(
   ConstHandle2Mixed self,
   const size_t index_,
   ConstHandle2ConstSum sum
);
// +++ Has, by label
extern_c int
MixedSumHasByLabel(
   ConstHandle2ConstMixed self,
   const char *const label
);
// --- Get, by label, const
extern_c Handle2ConstSum
MixedSumGetByLabelConst(
   ConstHandle2ConstMixed self,
   const char *const label
);
// +++ Get, by label, non-const
extern_c Handle2Sum
MixedSumGetByLabel(
   ConstHandle2Mixed self,
   const char *const label
);
// +++ Set, by label
extern_c void
MixedSumSetByLabel(
   ConstHandle2Mixed self,
   const char *const label,
   ConstHandle2ConstSum sum
);
// +++ Has, by domainMin
extern_c int
MixedSumHasByDomainMin(
   ConstHandle2ConstMixed self,
   const double domainMin
);
// --- Get, by domainMin, const
extern_c Handle2ConstSum
MixedSumGetByDomainMinConst(
   ConstHandle2ConstMixed self,
   const double domainMin
);
// +++ Get, by domainMin, non-const
extern_c Handle2Sum
MixedSumGetByDomainMin(
   ConstHandle2Mixed self,
   const double domainMin
);
// +++ Set, by domainMin
extern_c void
MixedSumSetByDomainMin(
   ConstHandle2Mixed self,
   const double domainMin,
   ConstHandle2ConstSum sum
);
// +++ Has, by domainMax
extern_c int
MixedSumHasByDomainMax(
   ConstHandle2ConstMixed self,
   const double domainMax
);
// --- Get, by domainMax, const
extern_c Handle2ConstSum
MixedSumGetByDomainMaxConst(
   ConstHandle2ConstMixed self,
   const double domainMax
);
// +++ Get, by domainMax, non-const
extern_c Handle2Sum
MixedSumGetByDomainMax(
   ConstHandle2Mixed self,
   const double domainMax
);
// +++ Set, by domainMax
extern_c void
MixedSumSetByDomainMax(
   ConstHandle2Mixed self,
   const double domainMax,
   ConstHandle2ConstSum sum
);
// +++ Has, by domainUnit
extern_c int
MixedSumHasByDomainUnit(
   ConstHandle2ConstMixed self,
   const char *const domainUnit
);
// --- Get, by domainUnit, const
extern_c Handle2ConstSum
MixedSumGetByDomainUnitConst(
   ConstHandle2ConstMixed self,
   const char *const domainUnit
);
// +++ Get, by domainUnit, non-const
extern_c Handle2Sum
MixedSumGetByDomainUnit(
   ConstHandle2Mixed self,
   const char *const domainUnit
);
// +++ Set, by domainUnit
extern_c void
MixedSumSetByDomainUnit(
   ConstHandle2Mixed self,
   const char *const domainUnit,
   ConstHandle2ConstSum sum
);
// -----------------------------------------------------------------------------
// Child: shortRangeSelfScalingVariance
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
MixedShortRangeSelfScalingVarianceHas(ConstHandle2ConstMixed self);
// --- Get, const
extern_c Handle2ConstShortRangeSelfScalingVariance
MixedShortRangeSelfScalingVarianceGetConst(ConstHandle2ConstMixed self);
// +++ Get, non-const
extern_c Handle2ShortRangeSelfScalingVariance
MixedShortRangeSelfScalingVarianceGet(ConstHandle2Mixed self);
// +++ Set
extern_c void
MixedShortRangeSelfScalingVarianceSet(ConstHandle2Mixed self, ConstHandle2ConstShortRangeSelfScalingVariance shortRangeSelfScalingVariance);