versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Mixed.f03


!! Get, by productFrame
function MixedCovarianceMatrixGetByProductFrame(handle, meta, metaSize) &
      bind(C, name='MixedCovarianceMatrixGetByProductFrame')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: MixedCovarianceMatrixGetByProductFrame
end function MixedCovarianceMatrixGetByProductFrame

!! Set, by productFrame
subroutine MixedCovarianceMatrixSetByProductFrame(handle, meta, metaSize, fieldHandle) &
      bind(C, name='MixedCovarianceMatrixSetByProductFrame')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedCovarianceMatrixSetByProductFrame


!! -----------------------------------------------------------------------------
!! Child: sum
!! -----------------------------------------------------------------------------

!! Has
function MixedSumHas(handle) &
      bind(C, name='MixedSumHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: MixedSumHas
end function MixedSumHas

!! Clear
subroutine MixedSumClear(handle) &
      bind(C, name='MixedSumClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine MixedSumClear

!! Size
function MixedSumSize(handle) &
      bind(C, name='MixedSumSize')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: MixedSumSize
end function MixedSumSize

!! Add
subroutine MixedSumAdd(handle, fieldHandle) &
      bind(C, name='MixedSumAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedSumAdd

!! Get, by index \in [0,size), const
function MixedSumGetConst(handle, index) &
      bind(C, name='MixedSumGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: MixedSumGetConst
end function MixedSumGetConst

!! Get, by index \in [0,size)
function MixedSumGet(handle, index) &
      bind(C, name='MixedSumGet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: MixedSumGet
end function MixedSumGet

!! Set, by index \in [0,size)
subroutine MixedSumSet(handle, index, fieldHandle) &
      bind(C, name='MixedSumSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedSumSet

!! ------------------------
!! Re: metadatum label
!! ------------------------

!! Has, by label
function MixedSumHasByLabel(handle, meta, metaSize) &
      bind(C, name='MixedSumHasByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: MixedSumHasByLabel
end function MixedSumHasByLabel

!! Get, by label, const
function MixedSumGetByLabelConst(handle, meta, metaSize) &
      bind(C, name='MixedSumGetByLabelConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: MixedSumGetByLabelConst
end function MixedSumGetByLabelConst

!! Get, by label
function MixedSumGetByLabel(handle, meta, metaSize) &
      bind(C, name='MixedSumGetByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: MixedSumGetByLabel
end function MixedSumGetByLabel

!! Set, by label
subroutine MixedSumSetByLabel(handle, meta, metaSize, fieldHandle) &
      bind(C, name='MixedSumSetByLabel')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedSumSetByLabel

!! ------------------------
!! Re: metadatum domainMin
!! ------------------------

!! Has, by domainMin
function MixedSumHasByDomainMin(handle, meta) &
      bind(C, name='MixedSumHasByDomainMin')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   integer(c_int) :: MixedSumHasByDomainMin
end function MixedSumHasByDomainMin

!! Get, by domainMin, const
function MixedSumGetByDomainMinConst(handle, meta) &
      bind(C, name='MixedSumGetByDomainMinConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: MixedSumGetByDomainMinConst
end function MixedSumGetByDomainMinConst

!! Get, by domainMin
function MixedSumGetByDomainMin(handle, meta) &
      bind(C, name='MixedSumGetByDomainMin')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: MixedSumGetByDomainMin
end function MixedSumGetByDomainMin

!! Set, by domainMin
subroutine MixedSumSetByDomainMin(handle, meta, fieldHandle) &
      bind(C, name='MixedSumSetByDomainMin')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedSumSetByDomainMin

!! ------------------------
!! Re: metadatum domainMax
!! ------------------------

!! Has, by domainMax
function MixedSumHasByDomainMax(handle, meta) &
      bind(C, name='MixedSumHasByDomainMax')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   integer(c_int) :: MixedSumHasByDomainMax
end function MixedSumHasByDomainMax

!! Get, by domainMax, const
function MixedSumGetByDomainMaxConst(handle, meta) &
      bind(C, name='MixedSumGetByDomainMaxConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: MixedSumGetByDomainMaxConst
end function MixedSumGetByDomainMaxConst

!! Get, by domainMax
function MixedSumGetByDomainMax(handle, meta) &
      bind(C, name='MixedSumGetByDomainMax')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: MixedSumGetByDomainMax
end function MixedSumGetByDomainMax

!! Set, by domainMax
subroutine MixedSumSetByDomainMax(handle, meta, fieldHandle) &
      bind(C, name='MixedSumSetByDomainMax')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedSumSetByDomainMax

!! ------------------------
!! Re: metadatum domainUnit
!! ------------------------

!! Has, by domainUnit
function MixedSumHasByDomainUnit(handle, meta, metaSize) &
      bind(C, name='MixedSumHasByDomainUnit')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: MixedSumHasByDomainUnit
end function MixedSumHasByDomainUnit

!! Get, by domainUnit, const
function MixedSumGetByDomainUnitConst(handle, meta, metaSize) &
      bind(C, name='MixedSumGetByDomainUnitConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: MixedSumGetByDomainUnitConst
end function MixedSumGetByDomainUnitConst

!! Get, by domainUnit
function MixedSumGetByDomainUnit(handle, meta, metaSize) &
      bind(C, name='MixedSumGetByDomainUnit')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: MixedSumGetByDomainUnit
end function MixedSumGetByDomainUnit

!! Set, by domainUnit
subroutine MixedSumSetByDomainUnit(handle, meta, metaSize, fieldHandle) &
      bind(C, name='MixedSumSetByDomainUnit')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedSumSetByDomainUnit


!! -----------------------------------------------------------------------------
!! Child: shortRangeSelfScalingVariance
!! -----------------------------------------------------------------------------

!! Has
function MixedShortRangeSelfScalingVarianceHas(handle) &
      bind(C, name='MixedShortRangeSelfScalingVarianceHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: MixedShortRangeSelfScalingVarianceHas
end function MixedShortRangeSelfScalingVarianceHas

!! Get, const
function MixedShortRangeSelfScalingVarianceGetConst(handle) &
      bind(C, name='MixedShortRangeSelfScalingVarianceGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: MixedShortRangeSelfScalingVarianceGetConst
end function MixedShortRangeSelfScalingVarianceGetConst

!! Get
function MixedShortRangeSelfScalingVarianceGet(handle) &
      bind(C, name='MixedShortRangeSelfScalingVarianceGet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr) :: MixedShortRangeSelfScalingVarianceGet
end function MixedShortRangeSelfScalingVarianceGet

!! Set
subroutine MixedShortRangeSelfScalingVarianceSet(handle, fieldHandle) &
      bind(C, name='MixedShortRangeSelfScalingVarianceSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine MixedShortRangeSelfScalingVarianceSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalMixed
